validando si existe asignado_percent para ordenar posiciones mediante ese campo

--- a/core/templates/municipal-triangle.html
+++ b/core/templates/municipal-triangle.html
@@ -12,80 +12,155 @@
             </span>
         </div>
     </div>
-
     {% if periodo_list|keyvalue:year == 'I' %}
-        {% for row in otros|dictsortreversed:'asignado_percent'|default:otros|dictsortreversed:'asignado' %}
-            {% if forloop.first %}
-                <div class="balloon-dialogue first-balloon-dialogue">
-                    <strong>
-                        {% for letter in 'POSICIÓN'|make_list %}
-                            <span>{{ letter }}</span>
-                        {% endfor %}
-                    </strong>
-                    <div class="position-balloon">
-                        <span {% if forloop.counter <= 10 %}style="left: 38%"{% endif %}>{{ forloop.counter }}</span>
-                        <span class="municipio-data">
+        {% if otros.0.asignado_percent %}
+            {% for row in otros|dictsortreversed:'asignado_percent' %}
+                {% if forloop.first %}
+                    <div class="balloon-dialogue first-balloon-dialogue">
+                        <strong>
+                            {% for letter in 'POSICIÓN'|make_list %}
+                                <span>{{ letter }}</span>
+                            {% endfor %}
+                        </strong>
+                        <div class="position-balloon">
+                            <span {% if forloop.counter <= 10 %}style="left: 38%"{% endif %}>{{ forloop.counter }}</span>
+                            <span class="municipio-data">
                            {% if municipio|lower == row.gasto__municipio__nombre|lower or municipio|lower == row.ingreso__municipio__nombre|lower or municipio|lower == row.inversion__municipio__nombre|lower or municipio|lower == row.nombre %}
                                <b>MI MUNICIPIO</b>
                            {% endif %}
-                            {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
+                                {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                             <br>
-                             {% if row.asignado_percent %}
-                                {{ row.asignado_percent|million|intcomma }}
-                            {% else %}
-                                {{ row.asignado|million|intcomma }}
-                            {% endif %}M. de C&oacute;rdobas
+                                {% if row.asignado_percent %}
+                                    {{ row.asignado_percent|million|intcomma }}
+                                {% else %}
+                                    {{ row.asignado|million|intcomma }}
+                                {% endif %}M. de C&oacute;rdobas
                         </span>
+                        </div>
                     </div>
-                </div>
-            {% elif  municipio|lower == row.gasto__municipio__nombre|lower or municipio|lower == row.ingreso__municipio__nombre|lower or municipio|lower == row.inversion__municipio__nombre|lower or municipio|lower == row.nombre %}
-                <div class="balloon-dialogue second-balloon-dialogue">
-                    <strong>
-                        {% for letter in 'POSICIÓN'|make_list %}
-                            <span>{{ letter }}</span>
-                        {% endfor %}
-                    </strong>
-                    <div class="position-balloon">
-                        <span {% if forloop.counter <= 10 %}style="left: 38%"{% endif %}>{{ forloop.counter }}</span>
-                        <span class="municipio-data">
+                {% elif  municipio|lower == row.gasto__municipio__nombre|lower or municipio|lower == row.ingreso__municipio__nombre|lower or municipio|lower == row.inversion__municipio__nombre|lower or municipio|lower == row.nombre %}
+                    <div class="balloon-dialogue second-balloon-dialogue">
+                        <strong>
+                            {% for letter in 'POSICIÓN'|make_list %}
+                                <span>{{ letter }}</span>
+                            {% endfor %}
+                        </strong>
+                        <div class="position-balloon">
+                            <span {% if forloop.counter <= 10 %}style="left: 38%"
+                                  {% elif forloop.counter >= 100 %}style="left: 16.3%"{% endif %}>{{ forloop.counter }}</span>
+                            <span class="municipio-data">
                         <b>MI MUNICIPIO</b>
                         {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                         <br>
-                            {% if row.asignado_percent %}
-                                {{ row.asignado_percent|million|intcomma }}
-                            {% else %}
-                                {{ row.asignado|million|intcomma }}
-                            {% endif %}M. de C&oacute;rdobas
+                                {% if row.asignado_percent %}
+                                    {{ row.asignado_percent|million|intcomma }}
+                                {% else %}
+                                    {{ row.asignado|million|intcomma }}
+                                {% endif %}M. de C&oacute;rdobas
                         </span>
+                        </div>
                     </div>
-                </div>
-            {% elif forloop.last %}
-                <div class="balloon-dialogue third-balloon-dialogue">
-                    <strong>
-                        {% for letter in 'POSICIÓN'|make_list %}
-                            <span>{{ letter }}</span>
-                        {% endfor %}
-                    </strong>
-                    <div class="position-balloon">
-                        <span {% if forloop.counter >= 100 %}style="left: 16.3%"{% endif %}>{{ forloop.counter }}</span>
-                        <span class="municipio-data">
+                {% elif forloop.last %}
+                    <div class="balloon-dialogue third-balloon-dialogue">
+                        <strong>
+                            {% for letter in 'POSICIÓN'|make_list %}
+                                <span>{{ letter }}</span>
+                            {% endfor %}
+                        </strong>
+                        <div class="position-balloon">
+                            <span {% if forloop.counter >= 100 %}style="left: 16.3%"{% endif %}>{{ forloop.counter }}</span>
+                            <span class="municipio-data">
                            {% if municipio|lower == row.gasto__municipio__nombre|lower or municipio|lower == row.ingreso__municipio__nombre|lower or municipio|lower == row.inversion__municipio__nombre|lower or municipio|lower == row.nombre %}
                                <b>MI MUNICIPIO</b>
                            {% endif %}
-                            {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
+                                {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                             <br>
-                            {% if row.asignado_percent %}
-                                {{ row.asignado_percent|million|intcomma }}
-                            {% else %}
-                                {{ row.asignado|million|intcomma }}
-                            {% endif %}M. de C&oacute;rdobas
+                                {% if row.asignado_percent %}
+                                    {{ row.asignado_percent|million|intcomma }}
+                                {% else %}
+                                    {{ row.asignado|million|intcomma }}
+                                {% endif %}M. de C&oacute;rdobas
                         </span>
+                        </div>
                     </div>
-                </div>
-            {% endif %}
-        {% endfor %}
+                {% endif %}
+            {% endfor %}
+        {% else %}
+            {% for row in otros|dictsortreversed:'asignado' %}
+                {% if forloop.first %}
+                    <div class="balloon-dialogue first-balloon-dialogue">
+                        <strong>
+                            {% for letter in 'POSICIÓN'|make_list %}
+                                <span>{{ letter }}</span>
+                            {% endfor %}
+                        </strong>
+                        <div class="position-balloon">
+                            <span {% if forloop.counter <= 10 %}style="left: 38%"{% endif %}>{{ forloop.counter }}</span>
+                            <span class="municipio-data">
+                           {% if municipio|lower == row.gasto__municipio__nombre|lower or municipio|lower == row.ingreso__municipio__nombre|lower or municipio|lower == row.inversion__municipio__nombre|lower or municipio|lower == row.nombre %}
+                               <b>MI MUNICIPIO</b>
+                           {% endif %}
+                                {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
+                            <br>
+                                {% if row.asignado_percent %}
+                                    {{ row.asignado_percent|million|intcomma }}
+                                {% else %}
+                                    {{ row.asignado|million|intcomma }}
+                                {% endif %}M. de C&oacute;rdobas
+                        </span>
+                        </div>
+                    </div>
+                {% elif  municipio|lower == row.gasto__municipio__nombre|lower or municipio|lower == row.ingreso__municipio__nombre|lower or municipio|lower == row.inversion__municipio__nombre|lower or municipio|lower == row.nombre %}
+                    <div class="balloon-dialogue second-balloon-dialogue">
+                        <strong>
+                            {% for letter in 'POSICIÓN'|make_list %}
+                                <span>{{ letter }}</span>
+                            {% endfor %}
+                        </strong>
+                        <div class="position-balloon">
+                            <span {% if forloop.counter <= 10 %}style="left: 38%"
+                                  {% elif forloop.counter >= 100 %}style="left: 16.3%"{% endif %}>{{ forloop.counter }}</span>
+                            <span class="municipio-data">
+                        <b>MI MUNICIPIO</b>
+                        {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
+                        <br>
+                                {% if row.asignado_percent %}
+                                    {{ row.asignado_percent|million|intcomma }}
+                                {% else %}
+                                    {{ row.asignado|million|intcomma }}
+                                {% endif %}M. de C&oacute;rdobas
+                        </span>
+                        </div>
+                    </div>
+                {% elif forloop.last %}
+                    <div class="balloon-dialogue third-balloon-dialogue">
+                        <strong>
+                            {% for letter in 'POSICIÓN'|make_list %}
+                                <span>{{ letter }}</span>
+                            {% endfor %}
+                        </strong>
+                        <div class="position-balloon">
+                            <span {% if forloop.counter >= 100 %}style="left: 16.3%"{% endif %}>{{ forloop.counter }}</span>
+                            <span class="municipio-data">
+                           {% if municipio|lower == row.gasto__municipio__nombre|lower or municipio|lower == row.ingreso__municipio__nombre|lower or municipio|lower == row.inversion__municipio__nombre|lower or municipio|lower == row.nombre %}
+                               <b>MI MUNICIPIO</b>
+                           {% endif %}
+                                {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
+                            <br>
+                                {% if row.asignado_percent %}
+                                    {{ row.asignado_percent|million|intcomma }}
+                                {% else %}
+                                    {{ row.asignado|million|intcomma }}
+                                {% endif %}M. de C&oacute;rdobas
+                        </span>
+                        </div>
+                    </div>
+                {% endif %}
+            {% endfor %}
+        {% endif %}
+
     {% else %}
-        {% for row in otros|dictsortreversed:'ejecutado_percent'|default:otros|dictsortreversed:'ejecutado' %}
+        {% for row in otros %}
             {% if forloop.first %}
                 <div class="balloon-dialogue first-balloon-dialogue">
                     <strong>
