--- a/core/templates/municipal-triangle.html
+++ b/core/templates/municipal-triangle.html
@@ -31,9 +31,9 @@
                                 {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                             <br>
                                 {% if row.asignado_percent %}
-                                    {{ row.asignado_percent|million|intcomma }}
+                                    {{ row.asignado_percent|intcomma }}
                                 {% else %}
-                                    {{ row.asignado|million|intcomma }}
+                                    {{ row.asignado|intcomma }}
                                 {% endif %}M. de C&oacute;rdobas
                         </span>
                         </div>
@@ -53,9 +53,9 @@
                         {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                         <br>
                                 {% if row.asignado_percent %}
-                                    {{ row.asignado_percent|million|intcomma }}
+                                    {{ row.asignado_percent|intcomma }}
                                 {% else %}
-                                    {{ row.asignado|million|intcomma }}
+                                    {{ row.asignado|intcomma }}
                                 {% endif %}M. de C&oacute;rdobas
                         </span>
                         </div>
@@ -76,9 +76,9 @@
                                 {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                             <br>
                                 {% if row.asignado_percent %}
-                                    {{ row.asignado_percent|million|intcomma }}
+                                    {{ row.asignado_percent|intcomma }}
                                 {% else %}
-                                    {{ row.asignado|million|intcomma }}
+                                    {{ row.asignado|intcomma }}
                                 {% endif %}M. de C&oacute;rdobas
                         </span>
                         </div>
@@ -103,9 +103,9 @@
                                 {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                             <br>
                                 {% if row.asignado_percent %}
-                                    {{ row.asignado_percent|million|intcomma }}
+                                    {{ row.asignado_percent|intcomma }}
                                 {% else %}
-                                    {{ row.asignado|million|intcomma }}
+                                    {{ row.asignado|intcomma }}
                                 {% endif %}M. de C&oacute;rdobas
                         </span>
                         </div>
@@ -125,9 +125,9 @@
                         {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                         <br>
                                 {% if row.asignado_percent %}
-                                    {{ row.asignado_percent|million|intcomma }}
+                                    {{ row.asignado_percent|intcomma }}
                                 {% else %}
-                                    {{ row.asignado|million|intcomma }}
+                                    {{ row.asignado|intcomma }}
                                 {% endif %}M. de C&oacute;rdobas
                         </span>
                         </div>
@@ -148,9 +148,9 @@
                                 {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                             <br>
                                 {% if row.asignado_percent %}
-                                    {{ row.asignado_percent|million|intcomma }}
+                                    {{ row.asignado_percent|intcomma }}
                                 {% else %}
-                                    {{ row.asignado|million|intcomma }}
+                                    {{ row.asignado|intcomma }}
                                 {% endif %}M. de C&oacute;rdobas
                         </span>
                         </div>
@@ -177,9 +177,9 @@
                             {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                             <br>
                             {% if row.ejecutado_percent %}
-                                {{ row.ejecutado_percent|million|intcomma }}
+                                {{ row.ejecutado_percent|intcomma }}
                             {% else %}
-                                {{ row.ejecutado|million|intcomma }}
+                                {{ row.ejecutado|intcomma }}
                             {% endif %}M. de C&oacute;rdobas
                         </span>
                     </div>
@@ -198,9 +198,9 @@
                         {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                         <br>
                             {% if row.ejecutado_percent %}
-                                {{ row.ejecutado_percent|million|intcomma }}
+                                {{ row.ejecutado_percent|intcomma }}
                             {% else %}
-                                {{ row.ejecutado|million|intcomma }}
+                                {{ row.ejecutado|intcomma }}
                             {% endif %}M. de C&oacute;rdobas
                         </span>
                     </div>
@@ -221,9 +221,9 @@
                             {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                             <br>
                             {% if row.ejecutado_percent %}
-                                {{ row.ejecutado_percent|million|intcomma }}
+                                {{ row.ejecutado_percent|intcomma }}
                             {% else %}
-                                {{ row.ejecutado|million|intcomma }}
+                                {{ row.ejecutado|intcomma }}
                             {% endif %}M. de C&oacute;rdobas
                         </span>
                     </div>
