cambiando tipo de letra de cantidad dinero del municipio

--- a/core/static/css/municipal-triangle.css
+++ b/core/static/css/municipal-triangle.css
@@ -85,6 +85,13 @@
     width: 300px;
 }
 
+.municipio-data .font-roboto {
+     font-weight: normal;
+    display: contents;
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+}
+
 .square span {
     color: white;
     text-align: center;
