--- a/core/templates/variance_analysis.html
+++ b/core/templates/variance_analysis.html
@@ -215,20 +215,23 @@
     <div class="loaded">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
-                    {% if not municipio %}
-                        <h2><strong>{{ rankin_name }}</strong> <br/>
-                        </h2>
-                    {% else %}
-                        <h2><strong>{{ rankin_name }}, presupuesto {{ year }}</strong> <br>
-                            Municipio de {{ municipio }} grupo
-                            "{{ mi_clase.clasificacion }}"</h2>
-                    {% endif %}
-                    <hr class="pma-line-3"/>
-                </div>
-                {% if municipio %}
+                {% if request.resolver_match.url_name != 'ejecucion_presupuesto' %}
+                    <div class="col-md-12">
+                        {% if not municipio %}
+                            <h2><strong>{{ rankin_name }}</strong> <br/>
+                            </h2>
+                        {% else %}
+                            <h2><strong>{{ rankin_name }}, presupuesto {{ year }}</strong> <br>
+                                Municipio de {{ municipio }} grupo
+                                "{{ mi_clase.clasificacion }}"</h2>
+                        {% endif %}
+                        <hr class="pma-line-3"/>
+                    </div>
+                {% endif %}
+
+                {% if municipio and request.resolver_match.url_name != 'ejecucion_presupuesto' %}
                     {% include 'municipal-triangle.html' %}
-                {% else %}
+                {% elif not municipio and request.resolver_match.url_name != 'ejecucion_presupuesto' %}
                     <div class="col-xs-5 col-sm-5 col-md-5 table-responsive">
                         <h3>{{ indicator_name }} <br> por categoría de Municipios</h3>
                         <table class="table table-condensed table-striped pma-bg-white">
@@ -278,6 +281,52 @@
                         <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
                         </div>
                     </div>
+                {% elif not municipio and request.resolver_match.url_name == 'ejecucion_presupuesto' %}
+                    <h3>{{ indicator_name }} <br> por categoría de Municipios</h3>
+                    <div class="col-xs-5 col-sm-5 col-md-5 col-md-offset-3 table-responsive">
+                        <table class="table table-condensed table-striped pma-bg-white">
+                            <thead class="thead-inverse">
+                            <tr class="bg-primary">
+                                <th class="text-left">Categoría de municipio</th>
+                                <th class="text-right">
+                                    {% if ep %}
+                                        Ingreso
+                                    {% else %}
+                                        P. Inicial
+                                    {% endif %}
+                                </th>
+                                <th class="text-right">
+                                    {% if ep %}
+                                        Gasto
+                                    {% else %}
+                                        Ejecución
+                                    {% endif %}
+                                </th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for row in porclasep %}
+                                <tr>
+                                    <td class="text-left">{{ row.clasificacion }}</td>
+                                    <td class="text-right">
+                                        {% if row.asignado %}
+                                            {{ row.asignado|floatformat:2 }}
+                                        {% elif row.ingreso %}
+                                            {{ row.ingreso|floatformat:2|intcomma }}
+                                        {% else %} 0 {% endif %}%
+                                    </td>
+                                    <td class="text-right">
+                                        {% if row.ejecutado %}
+                                            {{ row.ejecutado|floatformat:2 }}
+                                        {% elif row.gasto %}
+                                            {{ row.gasto|floatformat:2|intcomma }}
+                                        {% else %} 0 {% endif %}%
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
                 {% endif %}
             </div>
         </div>
@@ -296,8 +345,7 @@
             </ol>
         </div> <!-- .events-content -->
 
-        {% if municipio %}
-
+        {% if municipio and request.resolver_match.url_name != 'ejecucion_presupuesto' or not municipio and request.resolver_match.url_name != 'ejecucion_presupuesto' %}
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-center medium">
