--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -205,6 +205,7 @@
                     {% endblock %}
                 </div>
                 {% block charts %}
+		    {% if indicator != 'gf' %}
                     <div class="col-xs-12 col-sm-12 col-md-7">
                         <div class="chart-update col-xs-12 col-sm-12 col-md-1 text-right">
                             <span class="pma-icon pe-7s-bubble pma-fg-gray toggle-chart"
@@ -228,6 +229,7 @@
                             <div id='bar' class="view-alternative"> Chart will be rendered here</div>
                         </div>
                     </div>
+		    {% endif %}
                 {% endblock %}
 
                 {% block main_table %}
